♻️Adicionado-flexbox-no-menu-e-banner ♻️

--- a/home.html
+++ b/home.html
@@ -12,9 +12,11 @@
 </head>
 <body>
   <div> <!-- Topo da página -->
-    <div class="container-topo limitar-secao">
-      <div class="topo-logo">
+    <div class="container-topo">
+      <div class="container-logo">
+        <div class="container-logo-imagem">
         <img src="./assets/logo-icone.png" alt="logotipo" />
+      </div>
         <div>
           <h1>AlfaTech</h1>
           <p>Soluções em hospedagem</p>
@@ -30,8 +32,8 @@
   </div>
   <div> <!-- Conteúdo principal da página -->
     <div class="secao-banner">
-      <div class="container-banner limitar-secao">
-        <div>
+      <div class="container-banner">
+        <div class="container-texto">
           <p>Simples - Fácil de usar - 10x mais rápido!</p>
           <h2>O melhor serviço de hospedagem na web para o seu site.</h2>
           <p>
